Fix scrollbars, Hide timer when it overflows window

--- a/src/components/board.css
+++ b/src/components/board.css
@@ -2,8 +2,7 @@
   bottom: 0px;
   padding: 3px;
   padding-right: 0px;
-  overflow-x: scroll;
-  overflow-y: visible;
+  overflow-x: scroll; 
   position: absolute;
   top: 43px;
   width: 100%
@@ -38,7 +37,7 @@
   height: 100%;
   left: 0px;
   position: fixed;
-  /* top: 44px; */
+  top: 0px;
   width: 100%;
   z-index: 1;
 }
