--- a/src/components/column.css
+++ b/src/components/column.css
@@ -46,3 +46,7 @@
   top: 22px;
   width: 100%;
 }
+
+.scrollable::-webkit-scrollbar {
+  width: 0px;
+}
