--- a/src/components/header-bar.css
+++ b/src/components/header-bar.css
@@ -51,7 +51,7 @@ nav h1 a:hover {
 }
 
 .nav-menu .menu {
-  right: -11px;
+  right: -10px;
   top: 3px;
 }
 
