--- a/src/index.css
+++ b/src/index.css
@@ -11,13 +11,7 @@ body {
   font-size: 0.75em;
   font-weight: 400;
   margin: 0;
-  overflow-x: hidden;
-  overflow-y: scroll;
   padding: 0;
-}
-
-::-webkit-scrollbar {
-  display: none;
 }
 
 a, a:visited {
